xDM Kubernetes/semarchy-disposable-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: semarchy-disposable-pod
spec:
  containers:
    - name: pg-sql
      image: postgres:14-alpine
      command: [ "bash", "-c", "sleep infinity" ]
      resources:
        requests:
          memory: "200Mi"
        limits:
          memory: "250Mi"
