xDM Kubernetes/semarchy-appserver-active.yaml
  apiVersion: apps/v1
  kind: Deployment
  metadata:
    name: semarchy-appserver-active
    labels:
      app: semarchy-appserver-active
  spec:
    replicas: 1
    selector:
      matchLabels:
        app: semarchy-appserver-active
    template:
      metadata:
        labels:
          app: semarchy-appserver-active
      spec:
        containers:
          - image: semarchy/xdm:2024.1.1
            name: semarchy-appserver-active
            resources:
              requests:
                memory: "4Gi"
              limits:
                memory: "5Gi"
            ports:
              - containerPort: 8080
        restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: semarchy-appserver-active
  labels:
    app: semarchy-appserver-active
spec:
  ports:
    - port: 8080
  selector:
    app: semarchy-appserver-active
