xDM Kubernetes/ingress-session-affinity.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "sticksemarchy"
    nginx.ingress.kubernetes.io/session-cookie-expires: "172800"
    nginx.ingress.kubernetes.io/session-cookie-max-age: "172800"
    # #rewrite-target routes basd on the path 
    # nginx.ingress.kubernetes.io/rewrite-target: /s4
    #App root redirect to direct traffic to the login page
    nginx.ingress.kubernetes.io/app-root: /semarchy/login.do
    #The below sets the body size of browser uploads
    nginx.ingress.kubernetes.io/proxy-body-size: 120m
    #The below sets the timeout of the load balancer
    nginx.org/proxy-connect-timeout: "600"
    nginx.org/proxy-read-timeout: "600"
    #Other timeout settings
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/client-body-buffer-size: 120m
  name: ingress
  namespace: default
spec:
  tls:
  - hosts:
    - semarchy.amplifiuk.com
    - active.semarchy.amplifiuk.com
    secretName: kubernetestest
  rules:
  - host: semarchy.amplifiuk.com
    http:
      paths:
      - backend:
          service:
            name: semarchy-appserver-passive
            port:
              number: 8080
        path: /
        pathType: Prefix
  - host: active.semarchy.amplifiuk.com
    http:
      paths:
      - backend:
          service:
            name: semarchy-appserver-active
            port:
              number: 8080
        path: /
        pathType: Prefix
